# alx-low_level_programming

./: README.md  push
0x00-hello_world/: 1-compiler  101-quote.c  4-puts.c  5-printf.c  6-size.c  Diagramme sans nom.drawio  a.out  push  task
0x01-variables_if_else_while/: 0-positive_or_negative.c  1-last_digit.c  100-print_comb3.c  102-print_comb5.c  2-print_alphabet.c  3-print_alphabets.c  4-print_alphabt.c  5-print_numbers.c  6-print_numberz.c  7-print_tebahpla.c  8-print_base16.c  9-print_comb.c  README.md  push
0x02-functions_nested_loops/: 0-putchar.c  1-alphabet.c  10-add.c  100-times_table.c  101-natural.c  102-fibonacci.c  103-fibonacci.c  104-fibonacci.c  11-print_to_98.c  2-print_alphabet_x10.c  4-isalpha.c  5-sign.c  7-print_last_digit.c  8-24_hours.c  9-times_table.c  README.md  main.h  push  vi
0x03-debugging/: 1-main.c  3-main_a  3-print_remaining_days.c  main.h
0x04-more_functions_nested_loops/: 0-isupper.c  10-print_triangle.c  100-prime_factor.c  101-print_number.c  2-mul.c  3-print_numbers.c  4-print_most_numbers.c  5-more_numbers.c  6-print_line.c  7-print_diagonal.c  8-print_square.c  9-fizz_buzz  9-fizz_buzz.c  main.h  push
0x05-pointers_arrays_strings/: 0-reset_to_98.c  1-swap.c  100-atoi.c  101-keygen.c  2-strlen.c  3-puts.c  4-print_rev.c  5-rev_string.c  main.h  (+5 more)
0x13-more_singly_linked_lists/: 0-print_listint.c  1-listint_len.c  10-delete_nodeint.c  2-add_nodeint.c  3-add_nodeint_end.c  4-free_listint.c  5-free_listint2.c  6-pop_listint.c  7-get_nodeint.c  8-sum_listint.c  9-insert_nodeint.c  CMakeLists.txt  README.md  lists.h  main.c
(+134 files in other folders)
